fix(Header): fix overflow & consistent xbrowser gutters (#254)

--- a/react/Header/Header.less
+++ b/react/Header/Header.less
@@ -23,7 +23,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex: 1 0 auto;
+  width: 100%;
   padding: 0 (@grid-gutter-width / 2);
   max-width: @grid-container-width + @grid-gutter-width;
   .smallDeviceOnly({
@@ -36,29 +36,13 @@
   @media print {
     justify-content: flex-start;
   }
-  @media only screen and (min-width: (@grid-container-width)) { //IE11 flexbox horizontal centering
-    flex: 0 0 @grid-container-width;
-  }
-  @media only screen and (min-width: (@grid-container-width + @grid-gutter-width)) {
-    padding: 0;
-  }
 }
 
 .topBanner {
-  .smallDeviceOnly({
-    display: none;
-  });
-  .aboveSmallDevice({
-    display: flex;
-    background-color: @sk-background;
-    order: 0;
-    flex: 0 1 100%;
-    justify-content: center;
-    padding: 0 (@grid-gutter-width / 2);
-  });
-  @media only screen and (min-width: @responsive-breakpoint) and (max-width: (@grid-container-width + @grid-gutter-width)) {
-    padding: 0;
-  }
+  order: 0;
+  width: 100%;
+  background-color: @sk-background;
+  padding: 0 (@grid-gutter-width / 2);
 }
 
 .topBannerContent {
@@ -67,9 +51,7 @@
   flex-grow: 1;
   justify-content: center;
   max-width: @grid-container-width;
-  @media only screen and (min-width: (@grid-container-width)) { //IE11 flexbox horizontal centering
-    flex: 0 0 @grid-container-width;
-  }
+  margin: 0 auto;
 }
 
 .navigation {
@@ -168,9 +150,6 @@
 .locale {
   position: absolute;
   right: 0;
-  @media only screen and (min-width: @responsive-breakpoint) and (max-width: (@grid-container-width + @grid-gutter-width - 1)) {
-    right: (@grid-gutter-width / 2);
-  }
 }
 
 .divider {
